<resources>
    <string name="app_name">PZ12_Pogorelova</string>
    <string name="fe">TODO</string>
    <string name="wfe">TODO</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_a_new_account">Create A New Account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="ivanov_i">Ivanov.I</string>
    <string name="fgge">.......</string>
    <string name="wrw">TODO</string>
    <string name="wfwf">TODO</string>
    <string name="ewgeg">TODO</string>
    <string name="ivanov_gmail_com">ivanov@gmail.com</string>
    <string name="rhrh">TODO</string>
    <string name="sign_up">SIGN UP</string>
    <string name="wqeherj">TODO</string>
    <string name="wegegrh">TODO</string>
    <string name="reh">TODO</string>
    <string name="hthy">TODO</string>
    <string name="rhyj">TODO</string>
    <string name="settings">Settings</string>
    <string name="ivanov_ivan">Ivanov Ivan</string>
    <string name="ukik">TODO</string>
    <string name="history">History</string>
    <string name="uy">TODO</string>
    <string name="uuym">TODO</string>
    <string name="rostov">Rostov</string>
    <string name="ukuiky">TODO</string>
    <string name="thy">TODO</string>
    <string name="nyrtr">TODO</string>
    <string name="jjy">TODO</string>
    <string name="kia_rio">Kia Rio</string>
    <string name="_10">$10</string>
    <string name="_15_min">15 min</string>
    <string name="_60_min">60 min</string>
    <string name="_50">$50</string>
    <string name="_15">$15</string>
    <string name="kia_rio">Kia Rio</string>
    <string name="history">History</string>
    <string name="kia_rio">Kia Rio</string>
    <string name="_15_min">15 min</string>
    <string name="myt">TODO</string>
    <string name="drive">Drive</string>
    <string name="paid">Paid</string>
    <string name="jyj">TODO</string>
    <string name="e_mail_ivanov_gmail_com">E-mail: ivanov@gmail.com</string>
    <string name="exit">Exit</string>
    <string name="_15_hours">15 hours</string>
    <string name="_1510">$1510</string>
</resources>