<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity7">

    <LinearLayout
        android:layout_width="434dp"
        android:layout_height="158dp"
        android:background="#2C3043"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-11dp"
        tools:layout_editor_absoluteY="-8dp"
        tools:ignore="MissingConstraints"></LinearLayout>

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="40dp" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/myt"
        app:srcCompat="@drawable/nn"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="40dp" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="470dp"
        android:layout_height="668dp"
        app:srcCompat="@drawable/i"
        tools:layout_editor_absoluteX="-29dp"
        tools:layout_editor_absoluteY="147dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/jyj" />

    <LinearLayout
        android:layout_width="457dp"
        android:layout_height="602dp"
        android:background="#A321232C"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-24dp"
        tools:layout_editor_absoluteY="146dp"
        tools:ignore="MissingConstraints"></LinearLayout>

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ivanov_ivan"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="283dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paid"
        android:textColor="#607D8B"
        tools:ignore="MissingConstraints,TextContrastCheck"
        tools:layout_editor_absoluteX="247dp"
        tools:layout_editor_absoluteY="369dp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_15_hours"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="342dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1510"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="230dp"
        tools:layout_editor_absoluteY="342dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drive"
        android:textColor="#607D8B"
        tools:ignore="MissingConstraints,TextContrastCheck"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="369dp" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="193dp"
        tools:layout_editor_absoluteY="453dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail_ivanov_gmail_com"
        android:textColor="#607D8B"
        tools:ignore="MissingConstraints,TextContrastCheck"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="418dp" />

</androidx.constraintlayout.widget.ConstraintLayout>