<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity5">

    <LinearLayout
        android:layout_width="218dp"
        android:layout_height="630dp"
        android:background="#282C40"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="-12dp"
        tools:layout_editor_absoluteY="111dp"
        tools:ignore="MissingConstraints"></LinearLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView2"
        android:layout_width="427dp"
        android:layout_height="736dp"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="201dp"
        tools:layout_editor_absoluteY="3dp" />

    <LinearLayout
        android:layout_width="423dp"
        android:layout_height="122dp"
        android:background="#2C3043"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-6dp"
        tools:layout_editor_absoluteY="-8dp"
        tools:ignore="MissingConstraints"></LinearLayout>

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nyrtr"
        android:rotation="-71"
        app:srcCompat="@drawable/car"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        tools:layout_editor_absoluteX="259dp"
        tools:layout_editor_absoluteY="296dp" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="-188"
        android:rotationY="0"
        app:srcCompat="@drawable/car"
        tools:layout_editor_absoluteX="541dp"
        tools:layout_editor_absoluteY="218dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/uuym" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/car"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        tools:layout_editor_absoluteX="387dp"
        tools:layout_editor_absoluteY="175dp"
        android:contentDescription="@string/jjy" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/sssf"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="37dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/thy" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ivanov_ivan"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="37dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rostov"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="59dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/nn"
        tools:layout_editor_absoluteX="350dp"
        tools:layout_editor_absoluteY="37dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/ukik" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/msef"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="127dp"
        android:contentDescription="@string/ukuiky" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/sfegff"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="175dp"
        android:contentDescription="@string/uy" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:textColor="#FBFBFB"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="126dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#FFFFFF"
        android:text="@string/settings"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="177dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>