<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="505dp"
        android:layout_height="826dp"
        app:srcCompat="@drawable/i"
        tools:layout_editor_absoluteX="-51dp"
        tools:layout_editor_absoluteY="-40dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/ewgeg" />

    <LinearLayout
        android:layout_width="427dp"
        android:layout_height="765dp"
        android:background="#9AF8F8F8"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-7dp"
        tools:layout_editor_absoluteY="-14dp"
        tools:ignore="MissingConstraints"></LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="342dp"
        android:layout_height="75dp"
        android:text="@string/sign_in"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="524dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:textColor="#616161"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="649dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="#3E2723"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="486dp" />

    <androidx.constraintlayout.helper.widget.Layer
        android:layout_width="2dp"
        android:layout_height="7dp"
        tools:layout_editor_absoluteX="-30dp"
        tools:layout_editor_absoluteY="425dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="59dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="336dp"
        tools:ignore="MissingConstraints">

    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="59dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="404dp"
        tools:ignore="MissingConstraints"></LinearLayout>

    <androidx.constraintlayout.helper.widget.Layer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="imageView4"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/wfwf"
        app:srcCompat="@drawable/weg"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="358dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="23dp"
        android:layout_height="22dp"
        android:contentDescription="@string/wrw"
        app:srcCompat="@drawable/cdd"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="427dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="218dp"
        android:layout_height="25dp"
        android:text="@string/ivanov_i"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="357dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="273dp"
        android:layout_height="118dp"
        android:text="@string/fgge"
        android:textColor="#78909C"
        android:textSize="60sp"
        tools:ignore="MissingConstraints,TextContrastCheck,TextContrastCheck"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="375dp" />

</androidx.constraintlayout.widget.ConstraintLayout>