<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity6">

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="411dp"
        android:layout_height="102dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="389dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="411dp"
        android:layout_height="102dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="275dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:text="@string/kia_rio"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="294dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:text="@string/kia_rio"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="404dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="422dp"
        android:layout_height="159dp"
        android:background="#2C3043"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-6dp"
        tools:layout_editor_absoluteY="-4dp"
        tools:ignore="MissingConstraints"></LinearLayout>

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/nn"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="40dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/myt" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="40dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="411dp"
        android:layout_height="102dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:text="@string/kia_rio"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="180dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_15_min"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="215dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_15_min"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="328dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_60_min"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="445dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_15"
        tools:layout_editor_absoluteX="360dp"
        tools:layout_editor_absoluteY="196dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10"
        tools:layout_editor_absoluteX="360dp"
        tools:layout_editor_absoluteY="309dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_50"
        tools:layout_editor_absoluteX="360dp"
        tools:layout_editor_absoluteY="426dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>